# cassava-leaf-disease-classification

./: .dvcignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  README_EN.md  cliff.toml  docker-compose.yml  project_proposal.md  pyproject.toml
.dvc/: config
.github/workflows/: ci.yml
cassava_leaf_disease/: __init__.py  __main__.py  commands.py  fire_cli.py
cassava_leaf_disease/data/: __init__.py  download_data.py  download_model.py  dvc_utils.py
cassava_leaf_disease/serving/: __init__.py  app.py  infer.py  model_download.py
cassava_leaf_disease/training/: __init__.py  datamodule.py  dataset.py  lightning_module.py  train.py  transforms.py
cassava_leaf_disease/utils/: __init__.py  config.py  git.py  seed.py
configs/: download_data.yaml  download_model.yaml  infer.yaml  train.yaml
configs/augment/: basic.yaml  strong.yaml
configs/data/: cassava.yaml
configs/logger/: mlflow.yaml
configs/model/: efficientnet_b0.yaml  resnet18.yaml
data/: .gitignore  .gitkeep.dvc  cassava.dvc
docker/mlflow/: Dockerfile
docs/: s3_env_example.txt
scripts/: check_s3.py  generate_changelog.ps1  generate_changelog_docker.ps1  install_torch_cuda.ps1
tests/: test_commands.py  test_fire_cli.py  test_smoke.py
tests/test_data/: __init__.py  test_download_data.py  test_download_model.py  test_dvc_utils.py
tests/test_serving/: __init__.py  test_app.py  test_infer.py  test_model_download.py
tests/test_training/: __init__.py  test_datamodule.py  test_dataset.py  test_lightning_module.py  test_train.py  test_train_helpers.py  test_transforms.py
tests/test_utils/: __init__.py  test_config.py  test_git.py  test_seed.py
