[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "cassava-leaf-disease"
version = "0.1.0"
description = "Cassava leaf disease classification (MLOps training pipeline)"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { file = "LICENSE" }
authors = [{ name = "vorvit" }]
dependencies = [
  # Core ML / data
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "scikit-learn>=1.5.0",
  "pillow>=10.0.0",
  "opencv-python-headless>=4.9.0.80",
  # Training stack (Task2)
  "torch>=2.3.0",
  "torchmetrics>=1.4.0",
  "pytorch-lightning>=2.3.0",
  "timm>=1.0.0",
  "albumentations>=1.4.0",
  # Config / tracking / data management (Task2)
  "hydra-core>=1.3.2",
  "mlflow>=2.12.0",
  "dvc>=3.50.0",
  "dvc-s3>=3.2.0",
  # Optional serving
  "fastapi>=0.110.0",
  "python-multipart>=0.0.9",
  "uvicorn>=0.29.0",
  # Optional thin CLI wrapper (forwards to Hydra CLI)
  "fire>=0.6.0",
]

[project.scripts]
cassava-leaf-disease = "cassava_leaf_disease.commands:main"
cassava-leaf-disease-fire = "cassava_leaf_disease.fire_cli:main"
# Short aliases (virtualenv-local, convenient in day-to-day work)
cassava = "cassava_leaf_disease.commands:main"
cassava-fire = "cassava_leaf_disease.fire_cli:main"

[dependency-groups]
dev = [
  "pre-commit>=3.7.0",
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "mypy>=1.8.0",
  "ruff>=0.6.0",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF", "D"]
ignore = [
  "N999",
  # Don't require docstrings everywhere (keep config non-noisy)
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D106",
  "D107",
  # Conflicts / preferences for Google style
  "D203",
  "D213",
  # Too opinionated / noisy for this project
  "D401",
  "D417",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --disable-warnings --maxfail=1"

[tool.coverage.run]
branch = true
source = ["cassava_leaf_disease"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 95

[tool.mypy]
python_version = "3.10"
files = ["cassava_leaf_disease"]

# Minimal, non-noisy rollout:
ignore_missing_imports = true
check_untyped_defs = false
disallow_untyped_defs = false
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = false
